[project]
name = "poetryproj"
version = "0.1.0"
description = "learning to use poetry"
authors = [
    {name = "janand1977",email = "77576488+janand1977@users.noreply.github.com"}
]
requires-python = ">=3.14"
dependencies = [
    "ruff (>=0.15.1,<0.16.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
